2015-01-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34195: Thomas Mitterfellner: Completion/Linux/Command/_qdbus:
	new completion.

2015-01-10  Barton E. Schaefer  <schaefer@zsh.org>

	* 34212, 34313: Src/builtin.c: do not change unset-ness of special
	parameters when exporting them

2015-01-09  Barton E. Schaefer  <schaefer@zsh.org>

	* 34202: Completion/Base/Widget/_complete_debug,
	Completion/compinstall, Functions/Calendar/calendar,
	Functions/Zftp/zfget_match: safe tempfile creation part 3

	* users/19721: Doc/Zsh/compsys.yo: clarify context vs. style

2015-01-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34194: Doc/Zsh/arith.yo: add paragraph about integer
	promotion.

	* 34189:  Src/Zle/compcore.c, Src/Zle/compctl.c,
	Src/Zle/textobjects.c, Src/Zle/zle_tricky.c, Src/builtin.c,
	Src/context.c, Src/exec.c, Src/hist.c, Src/init.c, Src/lex.c,
	Src/parse.c, Src/signals.c, Src/zsh.h, Src/zsh.mdd:
	vain attempt to make context save and restore neater and
	control the status variables thereby managed.

2015-01-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 34182: Doc/Zsh/mod_files.yo: to add zf_* builtins you can
	use zmodload -m -F.

2015-01-09  Mikael Magnusson  <mikachu@gmail.com>

	* 30568: Doc/Zsh/contrib.yo, Functions/Misc/tetriscurses: Add
	tetriscurses contrib function, port of tetris to zcurses

2015-01-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 34160: Src/init.c, Src/input.c, Src/lex.c, Src/parse.c,
	Src/zsh.h, Test/D08cmdsubst.ztst: fix the problem that command
	and similar substitutions weren't properly parsed so could end
	prematurely.  Use improved resolution in context save and restore
	to allow parsing the substitution while tracking the string.

2015-01-07  Barton E. Schaefer  <schaefer@zsh.org>

	* 34154 (tweaked per 34155): Src/builtin.c: reorder bin_print() to
	avoid leaking the output descriptor when incorrect/incompatible
	options were passed

2015-01-07  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
